@@ -26,7 +26,7 @@ import static io.camunda.it.rdbms.exporter.RecordFixtures.getUserTaskCreatedReco
 import static org.assertj.core.api.Assertions.assertThat;
 
 import io.camunda.db.rdbms.RdbmsService;
-import io.camunda.exporter.rdbms.RdbmsExporter;
+import io.camunda.exporter.rdbms.RdbmsExporterWrapper;
 import io.camunda.search.entities.AuthorizationEntity;
 import io.camunda.search.entities.FlowNodeInstanceEntity.FlowNodeState;
 import io.camunda.search.entities.IncidentEntity.IncidentState;
@@ -64,7 +64,6 @@ import io.camunda.zeebe.protocol.record.value.deployment.DecisionRecordValue;
 import io.camunda.zeebe.protocol.record.value.deployment.DecisionRequirementsRecordValue;
 import io.camunda.zeebe.protocol.record.value.deployment.Form;
 import io.camunda.zeebe.protocol.record.value.deployment.Process;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -77,21 +76,26 @@ import org.springframework.test.context.TestPropertySource;
 
 @Tag("rdbms")
 @SpringBootTest(classes = {RdbmsTestConfiguration.class})
-@TestPropertySource(properties = {"spring.liquibase.enabled=false", "camunda.database.type=rdbms"})
+@TestPropertySource(
+    properties = {
+      "spring.liquibase.enabled=false",
+      "camunda.database.type=rdbms",
+      "zeebe.broker.exporters.rdbms.args.maxQueueSize=0"
+    })
 class RdbmsExporterIT {
 
   private final ExporterTestController controller = new ExporterTestController();
 
   @Autowired private RdbmsService rdbmsService;
 
-  private RdbmsExporter exporter;
+  private RdbmsExporterWrapper exporter;
 
   @BeforeEach
   void setUp() {
-    exporter = new RdbmsExporter(rdbmsService);
+    exporter = new RdbmsExporterWrapper(rdbmsService);
     exporter.configure(
         new ExporterContext(
-            null, new ExporterConfiguration("foo", Collections.emptyMap()), 1, null, null));
+            null, new ExporterConfiguration("foo", Map.of("maxQueueSize", 0)), 1, null, null));
     exporter.open(controller);
   }
 
@@ -102,8 +106,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processInstanceRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -116,7 +118,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processInstanceCompletedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var completedProcessInstance = rdbmsService.getProcessInstanceReader().findOne(key);
@@ -131,8 +132,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processDefinitionRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((Process) processDefinitionRecord.getValue()).getProcessDefinitionKey();
@@ -153,8 +152,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(variableCreatedRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var variable = rdbmsService.getVariableReader().findOne(variableCreatedRecord.getKey());
@@ -180,8 +177,6 @@ class RdbmsExporterIT {
 
     // when
     recordList.forEach(record -> exporter.export(record));
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -203,7 +198,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(flowNodeRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = flowNodeRecord.getKey();
@@ -215,7 +209,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(flowNodeCompleteRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var completedFlowNode = rdbmsService.getFlowNodeInstanceReader().findOne(key);
@@ -230,7 +223,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(userTaskRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((UserTaskRecordValue) userTaskRecord.getValue()).getUserTaskKey();
@@ -245,8 +237,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(record);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -262,8 +252,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(decisionDefinitionRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((DecisionRecordValue) decisionDefinitionRecord.getValue()).getDecisionKey();
@@ -279,7 +267,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(userRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var user = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -296,7 +283,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateUserRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedUser = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -309,7 +295,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getUserRecord(42L, UserIntent.DELETED));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedUser = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -324,7 +309,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(tenantRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var tenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
@@ -340,7 +324,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateTenantRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedTenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
@@ -358,7 +341,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(tenantRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var tenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
@@ -368,7 +350,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getTenantRecord(43L, TenantIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedTenant =
@@ -377,7 +358,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getTenantRecord(43L, TenantIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedTenant =
@@ -393,7 +373,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(roleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var role = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -407,7 +386,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateRoleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -417,7 +395,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.DELETED));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -432,7 +409,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(roleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var role = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -442,7 +418,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey()).orElseThrow();
@@ -450,7 +425,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey()).orElseThrow();
@@ -465,12 +439,11 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(groupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var group = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(group).isNotEmpty();
-    assertThat(group.get().key()).isEqualTo(groupRecordValue.getGroupKey());
+    assertThat(group.get().groupKey()).isEqualTo(groupRecordValue.getGroupKey());
     assertThat(group.get().name()).isEqualTo(groupRecordValue.getName());
 
     // given
@@ -479,17 +452,15 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateGroupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedGroup = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(updatedGroup).isNotEmpty();
-    assertThat(updatedGroup.get().key()).isEqualTo(updateGroupRecordValue.getGroupKey());
+    assertThat(updatedGroup.get().groupKey()).isEqualTo(updateGroupRecordValue.getGroupKey());
     assertThat(updatedGroup.get().name()).isEqualTo(updateGroupRecordValue.getName());
 
     // when
     exporter.export(getGroupRecord(42L, GroupIntent.DELETED));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedGroup = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
@@ -504,17 +475,15 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(groupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var group = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(group).isNotEmpty();
-    assertThat(group.get().key()).isEqualTo(groupRecordValue.getGroupKey());
+    assertThat(group.get().groupKey()).isEqualTo(groupRecordValue.getGroupKey());
     assertThat(group.get().name()).isEqualTo(groupRecordValue.getName());
 
     // when
     exporter.export(getGroupRecord(43L, GroupIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedGroup =
@@ -523,7 +492,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getGroupRecord(43L, GroupIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedGroup =
@@ -548,7 +516,6 @@ class RdbmsExporterIT {
         getIncidentRecord(
             IncidentIntent.CREATED, incidentKey, processInstanceKey, flowNodeInstanceKey);
     exporter.export(incidentRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var flowNode = rdbmsService.getFlowNodeInstanceReader().findOne(flowNodeInstanceKey);
@@ -570,7 +537,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(incidentResolvedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var flowNode2 = rdbmsService.getFlowNodeInstanceReader().findOne(flowNodeInstanceKey);
@@ -592,7 +558,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(formCreatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var formKey = ((Form) formCreatedRecord.getValue()).getFormKey();
@@ -607,7 +572,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(mappingCreatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((MappingRecordValue) mappingCreatedRecord.getValue()).getMappingKey();
@@ -619,7 +583,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(mappingDeletedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedMapping = rdbmsService.getMappingReader().findOne(key);
@@ -641,7 +604,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(authorizationRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var recordValue = (AuthorizationRecordValue) authorizationRecord.getValue();
@@ -668,7 +630,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(authorizationUpdatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedRecordValue = (AuthorizationRecordValue) authorizationUpdatedRecord.getValue();
@@ -708,7 +669,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(authorizationRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var recordValue = (AuthorizationRecordValue) authorizationRecord.getValue();
@@ -735,7 +695,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(authorizationUpdatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedAuthorization =
